# commonplace_wifimon

./: .env.example  .gitignore  Caddyfile.site  README.md  docker-compose.yml  mdu-to-olt-2026-04-08 (1).xlsx  stuff_to_fix.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  openapi.snapshot.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1772705ecfe3_add_mdu_olt_map.py  40f9492a92b5_initial_schema.py  f39766dafd86_add_property_island_column.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py  health.py  metrics.py
backend/app/api/v1/: admin.py  auth.py  dashboard.py
backend/app/cli/: main.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/eero/: client.py  parser.py
backend/app/models/: __init__.py  _mixins.py  common_area.py  connected_device_count.py  eero_device.py  maintenance.py  mdu_olt_map.py  network_status.py  property.py  user.py
backend/app/schemas/: admin.py  area_detail.py  auth.py  dashboard.py  import_yaml.py  maintenance.py  property_detail.py  report.py  search.py
backend/app/services/: admin.py  area_detail_db.py  auth.py  dashboard_aggregation.py  dashboard_db.py  dashboard_stream.py  device_counts_db.py  island_detect.py  maintenance.py  mdu_olt_map.py  mock_area_detail.py  mock_dashboard.py  mock_property_detail.py  notifier.py  pdf_report.py  polling.py  property_detail_db.py  report_builder.py  search.py  yaml_importer.py
backend/seeds/: properties.example.yaml
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_dashboard_aggregation.py  test_eero_parser.py  test_health.py  test_island_detect.py  test_maintenance_impact.py  test_mdu_olt_map.py  test_polling_state_machine.py  test_search.py  test_yaml_importer.py
backend/tests/integration/: test_admin_db.py  test_auth_db.py  test_dashboard_db.py  test_maintenance_db.py  test_polling_jobs_db.py  test_yaml_importer_db.py
deploy/: README.md  bootstrap.sh  migrate_from_legacy.py
deploy/caddy/: commonplace.caddy
deploy/sql/: init.sql
deploy/systemd/: wifimon-frontend.service  wifimon-web.service  wifimon-worker.service
design_handoff_common_area_monitor_redesign/: README.md  SPEC.md
design_handoff_common_area_monitor_redesign/design/: Common Area Monitor.html  atrium.jsx  data.jsx  styles.css  (+2 more)
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.mjs  openapi.json  package-lock.json  package.json  tailwind.config.ts
(+44 files in other folders)
