[project]
name = "common-area-monitor"
version = "0.1.0"
description = "WiFi Common Area Monitor — FastAPI rebuild"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "structlog>=24.4",
  "slowapi>=0.1.9",
  "passlib[bcrypt]>=1.7",
  "apscheduler>=3.10",
  "python-multipart>=0.0.12",
  "pytz>=2024.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
]

[project.scripts]
wifimon = "app.cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# A practical default — covers the bug-class checks (E, F, B, UP) and the
# common style nits (I for import sorting). Skip docstring-style and
# annotation-density rules since the codebase mixes typed and untyped.
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = [
    "E501",   # line length — long lines in test fixtures and SQL strings are fine
    "B008",   # FastAPI dep `Depends(...)` in default arg — idiomatic, intentional
    "SIM117", # combine `with` statements — clarity beats brevity for nested async-with
    "B904",   # `raise from` — the conditional places we raise are fine without
    "UP045",  # `X | None` syntax — not applying mid-codebase
    "UP006",  # builtin generics in annotations — same
    "UP042",  # `class X(str, enum.Enum)` → StrEnum — semantics differ subtly, leave as-is
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM"]   # asserts in tests, more relaxed style
"alembic/versions/*" = ["E", "F", "I", "B", "UP"]  # autogenerated; don't lint
"app/cli/main.py" = ["B008"]   # typer relies on Option(...) defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Use the same event loop for the whole test session so session-scoped
# async fixtures (db_engine in tests/conftest.py) compose with per-test
# coroutines. Without this you get "attached to a different loop" errors.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: requires a real Postgres reachable via TEST_DATABASE_URL",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
